--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,8 @@
 }
 
 nav {
+  position: absolute;
+  top: 0;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -31,6 +33,7 @@ nav ul li {
 
 .calculator {
   width: 100%;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -38,24 +41,77 @@ nav ul li {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  background: #00d790;
+  color: white;
+  background: radial-gradient(circle, #00d790 0%, #1d00b3 100%);
 }
 
 .calculator .calculator-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  color: white;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
   margin-top: 50px;
-  padding: 20px;
-  border-radius: 15px;
+}
+
+.calculator .timeframe-select {
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid white;
+  color: white;
+}
+
+.calculator .timeframe-select:focus {
+  outline: none;
+}
+
+.calculator div {
+  margin-top: 5px;
+}
+
+.calculator h3 {
+  color: white;
+}
+
+.calculator p {
+  margin-bottom: 8px;
+  color: white;
+}
+
+.calculator input {
+  color: white;
+  border: none;
+  border-bottom: 2px solid white;
+  background: transparent;
+}
+
+.calculator textarea:focus, .calculator input:focus {
+  outline: none;
+}
+
+.calculator .submit-btn {
+  border: none;
+  margin-top: 8px;
+  color: red;
+}
+
+.calculator .submit-btn input {
   background-color: blue;
+  border: none;
+  color: white;
+  padding: 4px 6px;
+  border-radius: 15px;
+  font-size: 24px;
+  cursor: pointer;
 }
 
 .calculator .calc-main {
   text-align: center;
+  color: white;
 }
 
 .calculator select {
@@ -72,6 +128,24 @@ nav ul li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 10px;
+  color: white;
+  margin-bottom: 5px;
+}
+
+.output {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 5px;
+  margin-right: 5px;
+  text-align: center;
+}
+
+.output h1 {
+  margin-bottom: 5px;
 }
 /*# sourceMappingURL=style.css.map */
