--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,6 @@
 }
 
 nav {
-  position: absolute;
   top: 0;
   width: 100%;
   display: -webkit-box;
@@ -31,12 +30,25 @@ nav ul li {
   padding: 10px 20px;
 }
 
-.calculator {
-  width: 100%;
-  height: 100vh;
+nav ul li:hover {
+  background: black;
+  color: white;
+}
+
+.home-page {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.calculator {
+  width: 100%;
+  height: 100vh;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
