--- a/src/style.scss
+++ b/src/style.scss
@@ -10,20 +10,21 @@
 }
 
 nav {
-    // position: absolute;
     top: 0;
     width: 100%;
     display: flex;
-    background-color: red;
+    background-color:  rgb(215,0,155);
+    color: white;
     ul {
         display: flex;
         li {
+            color: white;
             display: flex;
             padding: 10px 20px;
         }
         li:hover {
-            background: black;
-            color: white;
+            background: white;
+            color:  rgb(215,0,155);
         }
     }
 }
@@ -38,9 +39,8 @@ nav {
     width: 100%;
     height: 100vh;
     flex-direction: column;
-    background: rgb(0,215,144);
-    color: white;
-    background: radial-gradient(circle, rgba(0,215,144,1) 0%, rgba(29,0,179,1) 100%);
+    background: rgb(215,0,155);
+background: radial-gradient(circle, rgba(215,0,155,1) 0%, rgba(179,0,0,1) 100%);
     .calculator-form {
         display: flex;
         color: white;
@@ -78,9 +78,8 @@ nav {
         .submit-btn {
             border: none;
             margin-top: 8px;
-            color: red;
             input {
-                background-color: blue;
+                background-color: red;
                 border: none;
                 color: white;
                 padding: 4px 6px;
